--- a/notebook_limpio/web_scrapping_limpio.ipynb
+++ b/notebook_limpio/web_scrapping_limpio.ipynb
@@ -43,6 +43,7 @@
     "    options.add_argument(\"--start-maximized\")  \n",
     "    driver = webdriver.Chrome(service=service, options=options)\n",
     "    \n",
+    "    # Navegamos a la página\n",
     "    driver.get(url)\n",
     "    sleep(10)\n",
     "\n",
@@ -257,6 +258,338 @@
    "outputs": [],
    "source": [
     "df.to_pickle(\"../data/web_scrapping/hoteles_competencia_info_scrapping.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# -- Pruebas --"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inicializamos el WebDriver\n",
+    "service = Service(ChromeDriverManager().install())\n",
+    "options = Options()\n",
+    "options.add_argument(\"--start-maximized\")  \n",
+    "driver = webdriver.Chrome(service=service, options=options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Navegamos a la página\n",
+    "driver.get(url)\n",
+    "sleep(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictio_scrap = {\n",
+    "        \"nombre\": [],\n",
+    "        \"rating\": [],\n",
+    "        \"precio_noche\": [],\n",
+    "        \"fecha_reserva\": []\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nombre_hotel = driver.find_element(By.CLASS_NAME, \"title__link\").text\n",
+    "nombre_hotel = nombre_hotel.split(\"\\n\")[0]\n",
+    "dictio_scrap[\"nombre\"].append(nombre_hotel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_hotel = driver.find_element(By.CLASS_NAME, \"ratings__score\").text\n",
+    "rating_hotel = rating_hotel.split(\"/\\n\")[0]\n",
+    "dictio_scrap[\"rating\"].append(rating_hotel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precio_hotel = driver.find_element(By.CLASS_NAME, \"rate-details__price-wrapper\").text\n",
+    "precio_hotel = precio_hotel.split(\"\\n\")[1].split(\"€\")[0]\n",
+    "dictio_scrap[\"precio_noche\"].append(precio_hotel)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fecha = pd.Timestamp(datetime.today()).strftime('%Y-%m-%d')\n",
+    "dictio_scrap[\"fecha_reserva\"].append(fecha)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nombre': ['Novotel Madrid Center'],\n",
+       " 'rating': ['4.6'],\n",
+       " 'precio_noche': ['255'],\n",
+       " 'fecha_reserva': ['2025-02-25']}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dictio_scrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.73\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.74\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.75\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.76\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.77\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.78\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.79\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.80\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.81\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.82\")>]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nombres_hoteles = driver.find_elements(By.CLASS_NAME, \"title\") # Con \"title__link\" me sacaba 20 valores --> sacaba también el valor \"Ver el hotel\" por cada nombre de hotel\n",
+    "nombres_hoteles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "len(nombres_hoteles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.71\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.83\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.84\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.85\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.86\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.87\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.88\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.89\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.90\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.91\")>]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ratings_hoteles = driver.find_elements(By.CLASS_NAME, \"ratings__score\")\n",
+    "ratings_hoteles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "len(ratings_hoteles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.72\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.92\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.93\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.94\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.95\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.96\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.97\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.98\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.99\")>,\n",
+       " <selenium.webdriver.remote.webelement.WebElement (session=\"3ce9c1c8ffabaad3c787c1d574269f8f\", element=\"f.CE14995718BA26FFC8405D358FA78D23.d.A8E478354CB591B5C895BE7C96BAD8B3.e.100\")>]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "precios_hoteles = driver.find_elements(By.CLASS_NAME, \"rate-details__price-wrapper\")\n",
+    "precios_hoteles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "len(precios_hoteles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nombre': ['Novotel Madrid Center', 'ibis budget Madrid Calle 30', 'ibis Madrid Centro las Ventas', 'ibis budget Madrid Centro las Ventas', 'Novotel Madrid City Las Ventas', 'ibis budget Madrid Calle Alcalá', 'ibis Madrid Calle Alcalá', 'ibis budget Madrid Vallecas', 'Pullman Madrid Airport & Feria', 'Novotel Madrid Campo de las Naciones'], 'rating': ['4.6', '4.4', '4.5', '4.3', '4.6', '4.3', '4.5', '4.3', '4.2', '4.5'], 'precio_noche': ['255', '110', '172', '119', '173', '95', '119', '107', '129', '154'], 'fecha_reserva': ['2025-02-25', '2025-02-25', '2025-02-25', '2025-02-25', '2025-02-25', '2025-02-25', '2025-02-25', '2025-02-25', '2025-02-25', '2025-02-25']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictio_scrap_hotel = {\n",
+    "        \"nombre\": [],\n",
+    "        \"rating\": [],\n",
+    "        \"precio_noche\": [],\n",
+    "        \"fecha_reserva\": []\n",
+    "    }\n",
+    "\n",
+    "# Obtenemos la fecha actual\n",
+    "fecha = pd.Timestamp(datetime.today()).strftime('%Y-%m-%d')\n",
+    "\n",
+    "# Obtenemos los elementos visibles\n",
+    "nombres_hoteles = driver.find_elements(By.CLASS_NAME, \"title\")\n",
+    "\n",
+    "for i in range(len(nombres_hoteles)):\n",
+    "    try:\n",
+    "        nombre_hotel = nombres_hoteles[i].text\n",
+    "        nombre_hotel = nombre_hotel.split(\"\\n\")[0]\n",
+    "        dictio_scrap_hotel[\"nombre\"].append(nombre_hotel)\n",
+    "    except:\n",
+    "        dictio_scrap_hotel[\"nombre\"].append(\"No disponible\")\n",
+    "\n",
+    "    try:\n",
+    "        rating_hotel = driver.find_elements(By.CLASS_NAME, \"ratings__score\")[i].text\n",
+    "        rating_hotel = rating_hotel.split(\"/\")[0]\n",
+    "        dictio_scrap_hotel[\"rating\"].append(rating_hotel)\n",
+    "    except:\n",
+    "        dictio_scrap_hotel[\"rating\"].append(\"No disponible\")\n",
+    "    \n",
+    "    try:\n",
+    "        precio_hotel = driver.find_elements(By.CLASS_NAME, \"rate-details__price-wrapper\")[i].text\n",
+    "        precio_hotel = precio_hotel.split(\"\\n\")[1].split(\"€\")[0]\n",
+    "        dictio_scrap_hotel[\"precio_noche\"].append(precio_hotel)\n",
+    "    except:\n",
+    "        dictio_scrap_hotel[\"precio_noche\"].append(\"No disponible\")\n",
+    "    \n",
+    "    dictio_scrap_hotel[\"fecha_reserva\"].append(fecha)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictio_scrap_hotel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.close()\n",
+    "driver.quit()"
    ]
   }
  ],
