--- a/notebooks_final/graficos_final.ipynb
+++ b/notebooks_final/graficos_final.ipynb
@@ -34051,7 +34051,7 @@
     "\n",
     "\n",
     "# El parámetro ordered=True es importante para que pandas pueda ordenar las categorías (por ejemplo: \"Alta\" > \"Moderada\") o hacer comparaciones (df[\"Tipo_Reserva\"] > \"Igual\")\n",
-    "# En caso de que ordered=True pandas ordenaría los vlores por el orden interno por defecto (alfabético)\n",
+    "# En caso de que ordered=False pandas ordenaría los vlores por el orden interno por defecto (alfabético)\n",
     "# IMP: Este parámetro no reordena los registros del DataFrame por sí mismo. Es como decirle a pandas:\n",
     "# \"Estas categorías tienen un orden lógico, por si necesitas ordenarlas más tarde o compararlas.\"\n",
     "\n",
@@ -39474,30 +39474,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 93,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "93"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Agrupar por cliente y contar el número de reservas de cada uno\n",
-    "reservas_por_cliente = df_final.groupby(\"id_cliente\")[\"id_reserva\"].count()\n",
-    "\n",
-    "# Filtrar solo aquellos clientes con más de una reserva\n",
-    "clientes_con_multiples_reservas = reservas_por_cliente[reservas_por_cliente > 1].reset_index()\n",
-    "\n",
-    "# Para ver el resultado:\n",
-    "len(clientes_con_multiples_reservas)\n"
+    "# CLIENTES CON > 1 RESERVA"
    ]
   },
   {
@@ -39505,13 +39485,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reservas_cliente = df_final.groupby(\"id_cliente\")[\"id_reserva\"].count()\n",
+    "\n",
+    "clientes_multiples_reservas = reservas_cliente[reservas_cliente > 1]\n",
+    "\n",
+    "print(len(clientes_multiples_reservas)) # 93 clientes con > 1 reserva\n",
+    "print(clientes_multiples_reservas.unique()) # Sólo hay clientes con 2 o 3 reservas\n",
+    "\n",
+    "clientes_doble_reserva = reservas_cliente[reservas_cliente == 2]\n",
+    "print(len(clientes_doble_reserva)) # 91 clientes don 2 reservas\n",
+    "\n",
+    "clientes_triple_reserva = reservas_cliente[reservas_cliente == 3]\n",
+    "print(len(clientes_triple_reserva)) # 2 clientes con 3 reservas\n",
+    "\n",
+    "\n",
+    "df_clientes_doble_reservas = df_final[df_final[\"id_cliente\"].isin(clientes_doble_reserva.index)].sort_values(\"id_cliente\")\n",
+    "df_clientes_doble_reservas\n",
+    "\n",
+    "df_clientes_triple_reservas = df_final[df_final[\"id_cliente\"].isin(clientes_triple_reserva.index)].sort_values(\"id_cliente\")\n",
+    "df_clientes_triple_reservas\n",
+    "\n",
+    "# Ordenar clientes con 2 reservas por id_cliente y Probabilidad_Cancelacion\n",
+    "df_dobles_ordenado = df_clientes_doble_reservas.sort_values([\"id_cliente\", \"Probabilidad_Cancelacion\"], ascending=[True, False])\n",
+    "\n",
+    "\n",
+    "# Obtener la reserva con mayor probabilidad de cancelación por cliente\n",
+    "df_mayor_riesgo_cancelacion_doble_reservas = df_dobles_ordenado.groupby(\"id_cliente\").first().reset_index()\n",
+    "# .first() --> por cada cliente, la reserva con mayor riesgo (porque previamente hemos ordenado en orden descendente).\n",
+    "\n",
+    "# Seleccionar solo columnas de interés\n",
+    "df_reservas_cancelables = df_mayor_riesgo_cancelacion_doble_reservas[[\"id_reserva\", \"nombre_hotel\", \"competencia\", \"Probabilidad_Cancelacion\"]]\n",
+    "df_reservas_cancelables\n",
+    "\n",
+    "# Contar reservas en riesgo por competencia\n",
+    "cancelables_por_competencia = df_reservas_cancelables[\"competencia\"].value_counts()\n",
+    "cancelables_por_competencia\n",
+    "\n",
+    "# Contar reservas en riesgo por probabilidad de cancelación\n",
+    "cancelables_por_categoria = df_reservas_cancelables[\"Probabilidad_Cancelacion\"].value_counts()\n",
+    "cancelables_por_categoria "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 5))\n",
+    "sns.countplot(data=df_reservas_cancelables, x=\"Probabilidad_Cancelacion\", hue=\"competencia\", palette=[\"cadetblue\", \"burlywood\"])\n",
+    "plt.title(\"Reservas con Mayor Probabilidad de Cancelación por Tipo de Hotel\")\n",
+    "plt.ylabel(\"Número de Reservas\")\n",
+    "plt.xlabel(\"Probabilidad de Cancelación\")\n",
+    "plt.legend(title=\"Tipo de Hotel\", labels=[\"Propio\", \"Competencia\"])\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agrupamos por hotel y probabilidad de cancelación\n",
+    "cancelaciones_por_hotel = (\n",
+    "    df_reservas_cancelables\n",
+    "    .groupby([\"nombre_hotel\", \"Probabilidad_Cancelacion\"])\n",
+    "    .size()\n",
+    "    .reset_index(name=\"reservas\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "fig = px.bar(\n",
+    "    cancelaciones_por_hotel,\n",
+    "    x=\"nombre_hotel\",\n",
+    "    y=\"reservas\",\n",
+    "    color=\"Probabilidad_Cancelacion\",\n",
+    "    title=\"Reservas con Mayor Probabilidad de Cancelación por Nombre de Hotel\",\n",
+    "    barmode=\"group\"\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(xaxis_tickangle=-45)\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**COMPROBAR SI HAY CLIENTES QUE HAN RESERVADO EN HOTELES PROPIOS Y DE LA COMPETENCIA PARA LA MISMA FECHA**"
+    "**YA SABEMOS QUE HAY 93 CLIENTES CON >1 RESERVA. VAMOS A COMPROBAR SI HAY CLIENTES QUE HAN RESERVADO EN HOTELES PROPIOS Y DE LA COMPETENCIA PARA LA MISMA FECHA**"
    ]
   },
   {
@@ -39537,11 +39601,9 @@
     "clientes_competencia = df_final[df_final[\"competencia\"] == True][\"id_cliente\"].unique()\n",
     "clientes_competencia = set(clientes_competencia)\n",
     "\n",
-    "clientes_doble_reserva = clientes_propios.intersection(clientes_competencia)\n",
+    "clientes_reserva_propios_competencia = clientes_propios.intersection(clientes_competencia)\n",
     "\n",
-    "len(clientes_doble_reserva)\n",
-    "\n",
-    "\n"
+    "len(clientes_doble_reserva)"
    ]
   },
   {
@@ -39550,9 +39612,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clientes_doble_reserva = df_final[df_final[\"id_cliente\"].isin(clientes_doble_reserva)]\n",
+    "df_clientes_reserva_propios_competencia = df_final[df_final[\"id_cliente\"].isin(clientes_reserva_propios_competencia)]\n",
     "\n",
-    "df_clientes_doble_reserva\n"
+    "df_clientes_reserva_propios_competencia\n"
    ]
   },
   {
@@ -39561,325 +39623,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2])"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# reservas por cliente en hoteles propios y de la competencia\n",
-    "clientes_reservas = df_final.groupby([\"id_cliente\"])[\"competencia\"].nunique().reset_index()\n",
-    "\n",
-    "clientes_reservas = df_final.groupby([\"id_cliente\"])[\"competencia\"].nunique().reset_index()\n",
-    "\n",
-    "\n",
-    "clientes_reservas[\"competencia\"].unique()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_cliente</th>\n",
-       "      <th>competencia</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>246</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>409</th>\n",
-       "      <td>410</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>649</th>\n",
-       "      <td>650</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1241</th>\n",
-       "      <td>1242</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2831</th>\n",
-       "      <td>2832</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2895</th>\n",
-       "      <td>2896</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3741</th>\n",
-       "      <td>3742</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5032</th>\n",
-       "      <td>5033</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5506</th>\n",
-       "      <td>5507</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5618</th>\n",
-       "      <td>5619</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5855</th>\n",
-       "      <td>5856</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5945</th>\n",
-       "      <td>5946</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6001</th>\n",
-       "      <td>6002</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6201</th>\n",
-       "      <td>6202</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7002</th>\n",
-       "      <td>7003</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7081</th>\n",
-       "      <td>7082</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7676</th>\n",
-       "      <td>7677</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7758</th>\n",
-       "      <td>7759</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8330</th>\n",
-       "      <td>8331</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9052</th>\n",
-       "      <td>9053</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9463</th>\n",
-       "      <td>9464</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9478</th>\n",
-       "      <td>9479</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9552</th>\n",
-       "      <td>9553</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9834</th>\n",
-       "      <td>9835</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11085</th>\n",
-       "      <td>11086</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11105</th>\n",
-       "      <td>11106</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11167</th>\n",
-       "      <td>11168</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11913</th>\n",
-       "      <td>11914</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12246</th>\n",
-       "      <td>12247</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12553</th>\n",
-       "      <td>12554</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12610</th>\n",
-       "      <td>12611</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13439</th>\n",
-       "      <td>13440</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13447</th>\n",
-       "      <td>13448</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13512</th>\n",
-       "      <td>13513</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13606</th>\n",
-       "      <td>13607</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14013</th>\n",
-       "      <td>14014</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14032</th>\n",
-       "      <td>14033</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14293</th>\n",
-       "      <td>14294</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14328</th>\n",
-       "      <td>14329</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14656</th>\n",
-       "      <td>14657</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id_cliente  competencia\n",
-       "245           246            2\n",
-       "409           410            2\n",
-       "649           650            2\n",
-       "1241         1242            2\n",
-       "2831         2832            2\n",
-       "2895         2896            2\n",
-       "3741         3742            2\n",
-       "5032         5033            2\n",
-       "5506         5507            2\n",
-       "5618         5619            2\n",
-       "5855         5856            2\n",
-       "5945         5946            2\n",
-       "6001         6002            2\n",
-       "6201         6202            2\n",
-       "7002         7003            2\n",
-       "7081         7082            2\n",
-       "7676         7677            2\n",
-       "7758         7759            2\n",
-       "8330         8331            2\n",
-       "9052         9053            2\n",
-       "9463         9464            2\n",
-       "9478         9479            2\n",
-       "9552         9553            2\n",
-       "9834         9835            2\n",
-       "11085       11086            2\n",
-       "11105       11106            2\n",
-       "11167       11168            2\n",
-       "11913       11914            2\n",
-       "12246       12247            2\n",
-       "12553       12554            2\n",
-       "12610       12611            2\n",
-       "13439       13440            2\n",
-       "13447       13448            2\n",
-       "13512       13513            2\n",
-       "13606       13607            2\n",
-       "14013       14014            2\n",
-       "14032       14033            2\n",
-       "14293       14294            2\n",
-       "14328       14329            2\n",
-       "14656       14657            2"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Clientes que han reservado en ambos tipos de hoteles\n",
-    "clientes_doble_reserva = clientes_reservas[clientes_reservas[\"competencia\"] > 1]\n",
-    "\n",
-    "clientes_doble_reserva\n",
-    "\n",
-    "# print(f\"Cantidad de clientes que han reservado en ambos tipos de hoteles: {clientes_doble_reserva.shape[0]}\")\n"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -39895,7 +39638,7 @@
     "PARA ELLO ASIGNAREMOS UNA CATEGORÍA A LOS CLIENTES (EN FUNCIÓN DEL GASTO) Y A LOS HOTELES (EN FUNCIÓN DE LOS PRECIO NOCHE)\n",
     "- VER QUÉ TIPO DE CLIENTES PREDOMINAN EN LOS HOTELES PROPIOS Y DE LA COMPETENCIA  \n",
     "- VER SI LOS CLIENTES QUE HAN RESERVADO EN AMBOS HOTELES COINCIDE EL PERFIL DE CLIENTE CON EL PERFIL DE HOTEL \n",
-    "    - Si un cliente low cost ha reservado en un hotel high ticket propio y un hotel low cost de la competenvia para la misma fecha, es muy probable que nos cancele la reserva a nosotros."
+    "    - Si un cliente low cost ha reservado en un hotel propio de categoria high ticket y un hotel de categoria low cost de la competenvia, es muy probable que nos cancele la reserva a nosotros."
    ]
   },
   {
